Wrapping up the project setup

--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "deploy": "node build.js",
+    "build": "concurrently 'nest build'  'npm run docs:struct'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "concurrently 'nest start' 'npm run docs:struct'",
+    "start:dev": "concurrently 'nest start --watch' 'npm run docs:struct'",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "docs:struct": "compodoc -p tsconfig.json --disableSourceCode",
+    "docs:struct-code": "compodoc -p tsconfig.json",
+    "db:indexes": "node dist/shared/schemas/dbIndexesRunner",
+    "seed": "node dist/shared/seeders/seeder",
+    "seed:prod": "node dist/shared/seeders/prod.seeder",
+    "seed:refresh": "node dist/shared/seeders/seeder --refresh",
+    "seed:delete": "node dist/shared/seeders/seeder --delete",
+    "seed:delete:test": "Test=true node dist/shared/seeders/seeder --delete",
+    "seed:test": "Test=true node dist/shared/seeders/seeder --test",
+    "seed:test:refresh": "Test=true node dist/shared/seeders/seeder --test --refresh",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +40,7 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.12",
+    "@nestjs/throttler": "^5.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -60,6 +72,7 @@
     "@types/ua-parser-js": "^0.7.37",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
