--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.12",
     "@nestjs/throttler": "^5.1.2",
+    "@types/image-size": "^0.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "cloudinary": "^1.41.0",
+    "cloudinary": "^1.41.3",
     "date-fns": "^2.30.0",
     "google-auth-library": "^9.0.0",
+    "image-size": "^1.1.1",
     "jwks-rsa": "^3.1.0",
     "mailgun.js": "^9.3.0",
     "mongoose": "^7.5.2",
