--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cloudinary": "^1.41.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "google-auth-library": "^9.0.0",
     "jwks-rsa": "^3.1.0",
