--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "concurrently 'nest build'  'npm run docs:struct'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "concurrently 'nest start' 'npm run docs:struct'",
-    "start:dev": "concurrently 'nest start --watch' 'npm run docs:struct'",
+    "start:dev": "concurrently \"nest start --watch\" \"npm run docs:struct\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "docs:struct": "compodoc -p tsconfig.json --disableSourceCode",
