--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "google-auth-library": "^9.0.0",
+    "handlebars": "^4.7.8",
     "jwks-rsa": "^3.1.0",
     "mailgun.js": "^9.3.0",
     "mongoose": "^7.6.13",
+    "nodemailer": "^6.9.14",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "redis": "^4.6.10",
