--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "esModuleInterop": true,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+  },
+  "include": ["src/**/*.ts",
+    "src/shared/mail-templates/**/*"]
 }
