--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cloudinary": "^1.41.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "google-auth-library": "^9.0.0",
     "handlebars": "^4.7.8",
     "jwks-rsa": "^3.1.0",
