clarity: add comments to abstract and confusing code

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ PORT=3888
 APP_DATABASE_URL=mongodb://localhost:27017/inventor_app?retryWrites=true&w=majority
 LOG_DATABASE_URL=mongodb://localhost:27017/inventor_log?retryWrites=true&w=majority
 JWT_SECRET=
-JWT_EXPIRES=60
+JWT_EXPIRES=1h
 RATE_LIMIT_REQUEST_SIZE=60
 RATE_LIMIT_TTL=30
