--- a/package.json
+++ b/package.json
@@ -106,5 +106,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
