[IMP] - remove docs generation on build, due to env error

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "deploy": "node build.js",
-    "build": "concurrently 'nest build'  'npm run docs:struct'",
+    "build": "nest build",
+    "build-dev": "concurrently 'nest build'  'npm run docs:struct'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "concurrently 'nest start' 'npm run docs:struct'",
     "start:dev": "concurrently \"nest start --watch\" \"npm run docs:struct\"",
