chore: enable module aliasing with tsconfig-paths to fix import resolution issues.
Came across this trying to figure out where the deprecation warning was coming from. Its not definitive, but I think its from compodocs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-dev": "concurrently 'nest build'  'npm run docs:struct'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "concurrently 'nest start' 'npm run docs:struct'",
-    "start:dev": "concurrently \"nest start --watch\" \"npm run docs:struct\"",
+    "start:dev": "concurrently \"nest start --watch -r tsconfig-paths/register\" \"npm run docs:struct\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "docs:struct": "compodoc -p tsconfig.json --disableSourceCode",
