clean up unused code from codebase

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,14 @@
-NODE_ENV=development
-PORT=3888
+NODE_ENV=
+PORT=
 APP_DATABASE_URL=mongodb://localhost:27017/inventor_app?retryWrites=true&w=majority
 LOG_DATABASE_URL=mongodb://localhost:27017/inventor_log?retryWrites=true&w=majority
 JWT_SECRET=
-JWT_EXPIRES=60
-RATE_LIMIT_REQUEST_SIZE=60
-RATE_LIMIT_TTL=30
+JWT_EXPIRES=
+RATE_LIMIT_REQUEST_SIZE=
+RATE_LIMIT_TTL=
+REDIS_URL=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+BASE_URL=
