--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "passport-local": "^1.0.0",
     "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
+    "resend": "^4.5.2",
     "rxjs": "^7.8.1",
     "ua-parser-js": "^1.0.36"
   },
